// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen gvpIVRProfiles config import-export] should create the gvpIVRProfiles: the gvpIVRProfiles has been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ gvpivrprofile => cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen gvpIVRProfiles config import-export] should update the gvpIVRProfiles: the gvpIVRProfiles has been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ gvpivrprofile => cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
